--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,23 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  html {
+    height: 100%;
+  }
+  body {
+    height: 100%;
+    margin: 0;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background: linear-gradient(to top, #8fc9ff 0%, #e8d6ff 100%);
+    font-family: hwt-gothic-round, sans-serif;
+    font-weight: 900;
+    font-style: normal;
+  }
+
+  * {
+    @apply box-border;
+  }
+}
